...
        label.numberOfLines = 1
        label.textColor = UIColor.ypWhite
        label.font = UIFont.systemFont(ofSize: 13, weight: .regular)
        return label
    }()
    
    private lazy var likeButton = UIButton()
    private var gradientLayer: CAGradientLayer?
    
    private var completion: (() -> Void)?
    private var likeAction: (() -> Void)?
    
    
...
